# canAIry

./: .gitignore  README.md  config.example.yaml  linkedin_publisher.py  pyproject.toml
canairy/: __init__.py  __main__.py  alerter.py  cli.py  config.py  forensics.py  watcher.py
canairy/traps/: canary_keys.py  fake_cli.py  fake_configs.py  ollama_server.py
systemd/: canairy.service
